--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.77.2",
     "@tanstack/react-query-devtools": "^5.77.2",
+    "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.6.0",
     "react-spinners": "^0.17.0",
     "styled-components": "^6.1.18",
