--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@tanstack/react-query-devtools": "^5.77.2",
     "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
+    "react-confetti-explosion": "^3.0.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.6.0",
